--- a/index.html
+++ b/index.html
@@ -106,7 +106,15 @@
         </div>
     </section>
 
-    <footer>Præcis som ingen andre øl, usandsynligt Tuborg'sk</footer>
+    <footer>
+        <section id="fotter_section">
+            <div class="footer_txt">
+                <p>Præcis som ingen andre øl, usandsynligt Tuborg'sk</p>
+                <img src="billeder/footer.png" alt="">
+            </div>
+            <div class="footer_img"> </div>
+        </section>
+    </footer>
 
 
     <script>
